plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    flatDir {
        dirs "domain-discovery-d4/target"
    }
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation name: "D4-jar-with-dependencies"
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework
            useJUnitJupiter('5.8.1')
        }
    }
}

application {
    // Define the main class for the application.
    mainClass = 'domain.similarity.DomainSimilarity'
}

tasks.withType(JavaExec) {
    jvmArgs = ['-Xms2g', '-Xmx15g']
}
